apps/open-webui/overlays/librepod/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: open-webui
  namespace: open-webui
  annotations:
    gethomepage.dev/href: "https://open-webui.${BASE_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: open-webui
    gethomepage.dev/group: My Apps
    gethomepage.dev/icon: open-webui.png
    gethomepage.dev/weight: 10 # optional
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`open-webui.${BASE_DOMAIN}`)
      kind: Rule
      services:
        - name: open-webui
          port: 80
